# mx-backtest

./: .gitignore  README.md  pyproject.toml
src/mx_backtest/: __init__.py  costs.py  data.py  portfolio.py  slippage.py
